--- a/dev/cms/css/menu.css
+++ b/dev/cms/css/menu.css
@@ -42,12 +42,12 @@ body{
   width: 113px;
   height: 67px;
 }
+
 #logOut {
   cursor: pointer;
-  top: 3px;
   height: 20px;
-  margin-left: 10px;
-  width: 25px;
+  margin-left: 5px;
+  line-height: 20px;
 }
 .logoSect{
   display: inline-block;
@@ -79,12 +79,12 @@ body{
 }
 
 .menuSect{
-  padding: 0% 14%;
+  padding: 0% 14% 0% calc(14% - 26px);
   display:flex;
-  align-items: center;
   align-content: center;
   background-image: linear-gradient(180deg, #002066 0%, #0033A0 100%);
-  height: 56px;
+  height: 53px;
+  font-size:90%;
 }
 .footer {
   font-size: 12px;
@@ -200,9 +200,9 @@ table td {
 }
 
 tr{
-  height: 35px;
+  height: 32px;
   font-size: 13px;
-  background-color: #F3F5F9;
+  background-color: #F8F8F8;
 }
 tr:nth-child(even) {
 background-color: #FFFFFF;
