--- a/dev/app/css/main.css
+++ b/dev/app/css/main.css
@@ -38,7 +38,41 @@
     font-weight: bold;
 }
 
-
+.waitScreen{
+    position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgb(66 66 66 / 65%);
+      z-index: 99;
+      color: #FFFFFF;
+      font-size: 200%;
+      text-align: center;
+      z-index: 200;
+      opacity: 0;
+      transition: all .3s;
+  }
+  .spinCont{
+    position: absolute;
+    left: 0;
+    top: 0;
+    text-align: center;
+    width: 100%;
+    max-height: 45px;
+    padding: 0;
+    border: 0;
+    overflow: hidden;
+    height: 0;
+  }
+  .spinChar{
+    position: relative;
+    top: 45%;
+    font-size: 60%;font-family: Roboto;
+    color: #FFFFFF;
+    font-weight: 400;
+    text-align: center;
+  }
 html {
     margin:0;
     transition: opacity 0.3s;
