--- a/dev/cms/css/menu/operations.css
+++ b/dev/cms/css/menu/operations.css
@@ -668,6 +668,27 @@ input:disabled,select:disabled{
   height: 20px;
   line-height: 20px;
 }
+.status-color-2 {
+  background-color: #50AB47;  
+  color:#FFFFFF;
+  border-radius: 2px;
+  font-weight: 600;
+  padding: 4px 5px;
+  font-size: 78%;
+  height: 20px;
+  line-height: 20px;
+}
+.status-color-3 {
+  background-color: #0F73EE;
+  color:#FFFFFF;
+  opacity: 0.8;
+  border-radius: 2px;
+  font-weight: 600;
+  padding: 4px 5px;
+  font-size: 78%;
+  height: 20px;
+  line-height: 20px;
+}
 
 #divFilters {
   width: 15%;
