--- a/dev/seniat/css/menu.css
+++ b/dev/seniat/css/menu.css
@@ -318,6 +318,13 @@ body {
   margin-right:auto;
   text-align: center;
 }
+.btnIconSubh .icon {
+  color: #0F73EE;
+  font-size: 95%;
+  margin-left:auto;
+  margin-right:auto;
+  text-align: center;
+}
 .px-0 {
   padding-left: 0px;
   padding-right: 0px;
@@ -788,6 +795,27 @@ input:disabled,select:disabled{
   border-radius: 2px;
   font-weight: 600;
   padding: 5px 5px;
+  font-size: 78%;
+  height: 20px;
+  line-height: 20px;
+}
+.status-color-2 {
+  background-color: #50AB47;  
+  color:#FFFFFF;
+  border-radius: 2px;
+  font-weight: 600;
+  padding: 4px 5px;
+  font-size: 78%;
+  height: 20px;
+  line-height: 20px;
+}
+.status-color-3 {
+  background-color: #0F73EE;
+  color:#FFFFFF;
+  opacity: 0.8;
+  border-radius: 2px;
+  font-weight: 600;
+  padding: 4px 5px;
   font-size: 78%;
   height: 20px;
   line-height: 20px;
@@ -1799,7 +1827,9 @@ select {
   font-size: 90%;
   line-height: 20px;
 }
-
+.inptDownload{
+  cursor:pointer;
+}
 /*VISUALIZAR FACTURA*/
 
 
