--- a/dev/cms/css/menu/clients.css
+++ b/dev/cms/css/menu/clients.css
@@ -562,6 +562,14 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none; 
   margin: 0; 
 }
+input[type=number]::-moz-inner-spin-button, 
+input[type=number]::-moz-outer-spin-button { 
+  -webkit-appearance: none; 
+  margin: 0; 
+}
+input[type=number]{
+  -moz-appearance:textfield !important;
+}
 .itemsRow{
   padding-right: 50px;
   display: table;
