--- a/dev/cms/css/menu/main.css
+++ b/dev/cms/css/menu/main.css
@@ -76,6 +76,9 @@
 .cell40 {
   width: 40%;
 }
+.cell50 {
+  width: 50%;
+}
 .cell80 {
   width: 80%;
 }
@@ -108,18 +111,18 @@
     border: 1px solid #EFEFEF;
     border-radius: 10px;
     width: auto;
-    height: 100px;
+    height: 95px;
 }
 .chartBoxInf{
     background-color: #F8F8F8;
     border: 1px solid #EFEFEF;
     border-radius: 10px;
     width: auto;
-    height: 250px;
+    height: 265px;
 }
 .tblBoxInf {
     display: table;
-    width: 90%;
+    width: calc(100% - 30px);
     height: 100%;
     margin-left: auto;
     margin-right: auto;
@@ -128,8 +131,221 @@
 .cellCnt{
     display: table-cell;
     padding-left: 20px;
-    width: auto;
     vertical-align: middle;
-    width: 25%;
     position: relative;
+}
+.boxTit{
+  color:#0033A0;
+  font-family:  'Lato';
+  font-weight: bold;
+  padding-top: 5px;
+  font-size: 83%;
+  height: 35px;
+  display: table;
+}
+.boxTitCell{
+  display:table-cell;
+  vertical-align:middle;
+}
+.boxValCnt{
+  width:100%;
+  display:table;
+  height: 35px;
+}
+.valCell,.chgCell{
+  display:table-cell;
+  vertical-align:bottom;
+}
+.valCell{
+  font-weight:bold;
+  font-size:130%;
+}
+.chgCell{
+  text-align:right;
+  font-size: 70%;
+}
+.greenChg{
+  color:#5EB746;
+}
+.redChg{
+  color:#FA2200;
+}
+.container{
+  padding-bottom: 50px;
+}
+.chartTblCnt{
+  width:100%;
+  display:table;
+  height:calc(100% - 60px);
+  padding-top:15px;
+}
+.cellChart{
+  display:table-cell;
+  vertical-align:middle;
+}
+
+/**editReports**/
+.ceroLine {
+  position: absolute;
+  height: 1px;
+  width: 100%;
+  background-color: #E9E9E9;
+  z-index: 9998;
+}
+.boxLeyCnt{  
+  position: absolute;
+  font-size: 67%;
+  background-color: rgba(255, 255, 255, 0.95);
+  border-radius: 4px;
+  box-shadow: 0 2px 8px 0 rgba(0, 0, 0, 0.15);
+  width: 110px;
+  height: auto;
+  z-index: 10001;
+  display:none;
+  opacity:0;
+  padding-top:5px;
+  padding-bottom:5px;
+  padding-left:5px; 
+  padding-right:5px;
+}
+.rowLeyTbl {
+  display: table;
+  width: 100%;
+  margin-left:auto;
+  margin-right:auto;
+  padding-top:2px;
+  padding-bottom:2px;
+  height:15px;
+  font-size:95%;
+}
+.leyTit{  
+  text-align: left;
+  padding-left: 5px;
+  padding-top:5px;
+  font-weight: bold;
+  font-family: 'Lato';
+  color: #000000;
+  width:90%;
+}
+.rowColor,.rowNum,.rowDsc {
+  display: table-cell;
+  vertical-align: middle;
+}
+.rowColor{
+  padding-left:5px;
+  width:9px;
+  text-align:left;
+}
+.rowNum{
+  width:25px;
+  text-align:right;
+  padding-right:5px;
+}
+.rowBall{
+  width:7px;
+  height:7px;
+  border-radius: 50px;
+}
+.listBarrasV{
+  padding: 0;
+  margin: 0;
+  height: 115px;
+  width:auto;
+  display:table;
+  margin-left: 0;
+}
+.barCell{
+  display:table-cell;
+  vertical-align:bottom;
+  padding-right:20px;
+}
+.grafico-barrasV{
+  position: relative;
+  width: 100%;
+  height: auto;
+  margin-left: 0;
+  margin-right: auto;
+}
+
+.barra-fondoV{
+  border-radius: 0;
+  background: #f8f8f8;
+  width: 31px;
+  margin-bottom: 15px;
+  display: block;
+  position: relative;
+  border: 0;
+  height: 135px;
+  padding: 0;
+}
+
+.barrasV{
+  background: #ebedf1;
+  border-radius: 0;
+  margin-bottom: 0;
+  position: absolute;
+  z-index: 9999;
+  display: block;
+  width:100%;
+  left: 0;
+  bottom: 2px;
+}
+.cellCnt{
+  vertical-align:top;
+}
+.lblFootTbl{
+  display:table;
+  padding-left:10px;
+  margin-left:0;
+  margin-right:auto;
+}
+.lblDayCell{
+  font-family: 'Lato';
+  font-weight: 400;
+  width: 100%;
+  color: rgb(0 0 0 / 65%);
+  text-align: center;
+  font-size: 62%;
+  display: table;
+  margin-left:  auto;
+  margin-right:  auto;
+}
+.lblPromCell{
+  position:absolute;
+  display: table-cell;
+  vertical-align: middle;
+  font-family: Roboto;
+  font-weight: bold;
+  color: #1A3867;
+  /* padding-right: 10px; */
+  text-align: left;
+  font-size: 75%;
+}
+.lblYCnt{
+  border-radius: 0;
+  background: #f8f8f8;
+  min-width: 15px;
+  margin-bottom: 15px;
+  display: block;
+  position: relative;
+  border: 0;
+  height: 135px;
+  padding: 0;
+  text-align:  right;
+}
+.lblSect{
+  background: #f8f8f8;
+  border-radius: 0;
+  /*margin-bottom: -7.5px;*/
+  position: absolute;
+  z-index: 9999;
+  display: block;
+  text-align:  right;  
+  font-size:62%;
+  height:15px;
+  line-height:15px;
+  color:  rgb(0 0 0 / 65%);
+  font-family:  'Lato';
+  font-weight:400;
+  right: 0;
 }
