--- a/dev/cms/css/menu/main.css
+++ b/dev/cms/css/menu/main.css
@@ -1,3 +1,8 @@
+#main{
+  background-color: #5EB746;
+  padding: 2px 25px;
+  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.5);
+}
 .inptCnt{
   background-color: #FFFFFF;
   border: 1px solid #E3E9EC;
@@ -118,7 +123,7 @@
     border: 1px solid #EFEFEF;
     border-radius: 10px;
     width: auto;
-    height: 265px;
+    height: auto;
 }
 .tblBoxInf {
     display: table;
@@ -142,6 +147,10 @@
   font-size: 83%;
   height: 35px;
   display: table;
+  width:100%;
+}
+.chartTit{
+  padding-bottom:17px;
 }
 .boxTitCell{
   display:table-cell;
@@ -176,12 +185,12 @@
 .chartTblCnt{
   width:100%;
   display:table;
-  height:calc(100% - 60px);
-  padding-top:15px;
+  height:205px;
+  padding-bottom:15px;
 }
 .cellChart{
   display:table-cell;
-  vertical-align:middle;
+  vertical-align:bottom;
 }
 
 /**editReports**/
@@ -249,15 +258,17 @@
 .listBarrasV{
   padding: 0;
   margin: 0;
-  height: 115px;
-  width:auto;
-  display:table;
+  height: 145px;
+  width: 100%;
+  display: table;
   margin-left: 0;
 }
 .barCell{
-  display:table-cell;
-  vertical-align:bottom;
-  padding-right:20px;
+  display: table-cell;
+  vertical-align: bottom;
+  padding-right: 10px;
+  padding-left:10px;
+  text-align: center;
 }
 .grafico-barrasV{
   position: relative;
@@ -270,12 +281,12 @@
 .barra-fondoV{
   border-radius: 0;
   background: #f8f8f8;
-  width: 31px;
+  width: 29px;
   margin-bottom: 15px;
   display: block;
   position: relative;
   border: 0;
-  height: 135px;
+  height: 145px;
   padding: 0;
 }
 
@@ -329,7 +340,7 @@
   display: block;
   position: relative;
   border: 0;
-  height: 135px;
+  height: 145px;
   padding: 0;
   text-align:  right;
 }
@@ -568,4 +579,37 @@ p.center-date {
     display: table-cell;
     vertical-align: middle;
     font-size: 65%;
+}
+.graphic{
+  display:table;
+  width:100%;
+  height:205px;
+  padding-bottom:15px;
+}
+.graphicCell{
+  display:table-cell;
+  width:100%;
+  vertical-align:middle;
+  height:100%;
+}
+.graphicCanva{
+  width:100%;
+  height:100%;
+}
+.graphic table td{
+  padding:5px 5px;
+}
+.graphic table th{
+  background-color:transparent;
+  color: rgba(0, 0, 0, 0.65);
+  font-weight:bold;
+  font-family:'Lato';
+  font-size:115%;
+  height:auto;
+  padding:2px 5px;
+}
+.graphic table tr{
+  background-color:transparent;
+  font-size:65%;
+  height:auto;
 }
